# portal-verkle

./: Cargo.toml
portal-verkle/: Cargo.toml
portal-verkle/src/: beacon_block_fetcher.rs  lib.rs  state_trie_fetcher.rs  utils.rs
portal-verkle/src/evm/: error.rs  verkle_evm.rs
portal-verkle/src/types/: genesis.rs  mod.rs  state_write.rs  witness.rs
portal-verkle/src/verkle_trie/: error.rs  trie.rs  trie_printer.rs
portal-verkle/src/verkle_trie/nodes/: branch.rs  commitment.rs  leaf.rs  mod.rs
