[package]
name = "portal-verkle"
version = "0.1.0"
edition = "2021"
description = "The binaries for Verkle Trie and Portal Network interaction."
license = "MIT"
keywords = ["ethereum", "portal-network", "verkle"]

[dependencies]
alloy-primitives = { version = "0.7", features = ["serde", "rlp"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
derive_more = "0.99"
ethportal-api = { git = "https://github.com/morph-dev/trin.git", rev = "55d380fda6e53127126ecce5c5eac8bde627f735" }
jsonrpsee = { version = "0.20", features = ["async-client", "client"] }
portal-verkle-primitives = { git = "https://github.com/morph-dev/portal-verkle-primitives.git", rev = "640fbe4f6488a7d686d8df4561f1c7d6e8dc8403" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_nested_with = "0.2"
ssz_types = "0.6"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
