[package]
name = "portal-verkle"
version = "0.1.0"
edition = "2021"
description = "The binaries for Verkle Trie and Portal Network interaction."
license = "MIT"
keywords = ["ethereum", "portal-network", "verkle"]

[dependencies]
alloy-primitives = { version = "0.7", features = ["serde", "rlp"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
derive_more = "0.99"
ethportal-api = { git = "https://github.com/morph-dev/trin.git", rev = "af94a8007a93783345a6e2d8627e7f6f1886a2f4" }
futures = "0.3"
itertools = "0.13"
jsonrpsee = { version = "0.20", features = ["async-client", "client"] }
portal-verkle-primitives = { git = "https://github.com/morph-dev/portal-verkle-primitives.git", rev = "244a975baca2af42d4a596f7f6f83bc26c35223b" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_nested_with = "0.2"
ssz_types = "0.6"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
